swagger docs add'ed manually
